// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with an emoji-only message 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY sc-aapZh fVgfNZ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ sc-eSxRjU cCgcCF"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iKMXcJ sc-jNHnZL ktTdyk dFBdMM"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY sc-aapZh fVgfNZ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ sc-eSxRjU cCgcCF"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iKMXcJ sc-jNHnZL ktTdyk dFBdMM"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header whose text mentions the self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi jYTJbr sc-eySzLJ cUyzBN"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-fvpurI kDAIQE"
    >
      <div
        class="sc-cbTzWS gLFFwd sc-ihILfL iwiISf"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-hjHbEU djltnp"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-cqJfLC fDOCyl"
        tabindex="0"
      >
        <span
          class="sc-jefFLK JOYny"
        >
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-iKMXcJ sc-jNHnZL ktTdyk dFBdMM"
    >
      Hey
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with a message-link chip 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY sc-eySzLJ cUyzBN"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-fvpurI kDAIQE"
    >
      <div
        class="sc-cbTzWS gLFFwd sc-ihILfL iwiISf"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-hjHbEU djltnp"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-cqJfLC fDOCyl"
        tabindex="0"
      >
        <span
          class="sc-jefFLK JOYny"
        >
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-iKMXcJ sc-jNHnZL ktTdyk dFBdMM"
    >
      see this: 
      <a
        class="sc-leSMyW UmftH"
        href="https://shieldbattery.net/chat/1/some-channel?m=9b2e8d0e-5f3a-4a2b-8c1d-6f5e4d3c2b1a"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        <span
          aria-hidden="true"
          class="sc-hiCkpJ dnvpxc sc-hmvloj iwqmxW"
        >
          chat
        </span>
        <span
          aria-label="Channel name loading…"
          class="sc-jCHTsB bpiRSv"
        >
                     
        </span>
        <span
          class="sc-cAiakp gHXIoF"
        >
          ›
        </span>
        <span
          class="sc-gqtqYm dQnPRv"
        >
          message
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY sc-eySzLJ cUyzBN"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-fvpurI kDAIQE"
    >
      <div
        class="sc-cbTzWS gLFFwd sc-ihILfL iwiISf"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-hjHbEU djltnp"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-cqJfLC fDOCyl"
        tabindex="0"
      >
        <span
          class="sc-jefFLK JOYny"
        >
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-emDrzp jGfOls"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-iKMXcJ sc-jNHnZL ktTdyk dFBdMM"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jnrVmt kxEqYU"
    >
      * 
    </span>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA sc-kjOPSs bQKOvL kGTtGB"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-iKMXcJ sc-bXdOnr ktTdyk ejkRkc"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      hey
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      hey
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi jYTJbr"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      Hey
       
      <span
        class="sc-gIBpqd gMdmcl sc-gLDjOb fNLfMs"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fyroPG kYzuOC"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe bhLMIn"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-btsYIi NISY"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-bvFjeY pXgzQ"
      tabindex="0"
    >
      <span
        class="sc-ekrhcz btNyeA"
      >
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-emDrzp jGfOls"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gIBpqd gMdmcl sc-bnOOOA bQKOvL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fyroPG kYzuOC"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-emDrzp jGfOls"
    >
      : 
    </i>
    <span
      class="sc-iKMXcJ ktTdyk"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
        tabindex="-1"
      >
        <span
          class="sc-bLdrIe dqTOVs"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
